Fix url change error

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             bkjw = document.getElementById("bkjw")
 
             address.onblur = function () {
-                address.loadURL(address.value + "student/public/login.asp")
+                bkjw.loadURL(address.value + "student/public/login.asp")
             }
 
             document.getElementById("go").onclick = function () {
